# gtkrs-template-dispose

./: Cargo.toml  meson.build  org.gnome.gtkrs_test.json
data/: meson.build  org.gnome.gtkrs_test.appdata.xml.in  org.gnome.gtkrs_test.desktop.in  org.gnome.gtkrs_test.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.rs  config.rs  gtkrs-test.gresource.xml  main.rs  meson.build  row.rs  row.ui  window.rs  window.ui
