[package]
name = "gtkrs-test"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.5.0", package = "gtk4", features = ["v4_8"] }

[dependencies.adw]
package = "libadwaita"
version = "0.2.0-alpha.2"
features = ["v1_2"]
